session uni handling